@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.7" provider-name="L0RE">
+<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.8" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="service.L0RE.cron" version="1.0.1" optional="true"/>
@@ -25,9 +25,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.7  (17.08.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Rubrik = Themen - Ordner ist leer
-- added: Weitere Sortiermethoden für Episoden u.a. Name, Datum, Dauer (settings)
+		<news>[B][COLOR orangered]Version 1.0.8  (20.10.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Titelanzeige aller Serien-Episoden fehlerhaft
+- fixed: Übertragung und Anzeige in die Medienbibliothek funktioniert nicht korrekt, wenn "&amp;" im Namen der Serie vorkommt
 		</news>
 	</extension>
 </addon>
