@@ -36,3 +36,7 @@
 [B]Version 1.0.7  (17.08.2019)[/B] by realvito[CR]
 - fixed: Rubrik = Themen - Ordner ist leer
 - added: Weitere Sortiermethoden für Episoden u.a. Name, Datum, Dauer (settings)
+
+[B]Version 1.0.8  (20.10.2019)[/B] by realvito[CR]
+- fixed: Titelanzeige aller Serien-Episoden fehlerhaft
+- fixed: Übertragung und Anzeige in die Medienbibliothek funktioniert nicht korrekt, wenn "&" im Namen der Serie vorkommt
